--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "john-portfolio",
-  "homepage": "http://oak45985.github.io/",
+  "homepage": "http://oak45985.github.io/john-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
